--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               >
             </li>
             <li class="navigation__item">
-              <a href="" class="navigation__link">О седоне</a>
+              <a href="" class="navigation__link">О Седоне</a>
             </li>
             <li class="navigation__item">
               <a href="catalog.html" class="navigation__link">Гостиницы</a>
@@ -46,13 +46,13 @@
           </li>
         </ul>
         <a class="main-header__button button button--brown" href="#">
-          Хочу сюда
+          Хочу сюда!
         </a>
       </header>
       <main>
         <div class="main-banner">
           <img
-            src="/img/welcome.svg"
+            src="img/welcome.svg"
             alt="Седона — небольшой городок в Аризоне, заслуживающий большего!"
           />
         </div>
@@ -74,7 +74,7 @@
                 </p>
               </div>
               <img
-                src="../img/adv-right.jpg"
+                src="img/adv-right.jpg"
                 width="800"
                 height="385"
                 alt="Настоящий городок"
@@ -103,7 +103,7 @@
               class="main-advantages__item advantages-card advantages-card--blue"
             >
               <img
-                src="../img/adv-left.jpg"
+                src="img/adv-left.jpg"
                 alt="Там есть Мост дьявола"
                 class="features-img features-img-left"
                 width="800"
@@ -129,7 +129,7 @@
             Опытный персонал и качественное обслуживание!
           </p>
           <ul class="main-features__list list-reset features">
-            <li class="features__item">
+            <li class="features__item features__item--home">
               <h3 class="features-list__title">Жильё</h3>
               <p class="features-list__text">
                 Рекомендуем пожить<br />
@@ -137,14 +137,14 @@
                 всё как в кино!
               </p>
             </li>
-            <li class="features__item">
+            <li class="features__item features__item--meal">
               <h3 class="features-list__title">Еда</h3>
               <p class="features-list__text">
                 Всегда заказывайте<br />
                 топовый фирменный бургер, вы не разочаруетесь!
               </p>
             </li>
-            <li class="features__item">
+            <li class="features__item features__item--gift">
               <h3 class="features-list__title">Сувениры</h3>
               <p class="features-list__text">
                 Не только китайского, <br />но и настоящего местного
@@ -219,7 +219,6 @@
         </a>
       </footer>
     </div>
-    <script src="js/script.min.js"></script>
     <div class="form-wrap">
       <div class="form-wrap__block">
         <div class="form-wrap__title">Поиск гостиницы в Седоне</div>
