--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="icon" href="img/favicon.svg" type="image/svg+xml" />
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png" />
   </head>
   <body class="page-body">
     <div class="page-wrap container">
@@ -219,7 +219,7 @@
         </a>
       </footer>
     </div>
-    <div class="form-wrap">
+    <div class="form-wrap form-wrap--hidden">
       <div class="form-wrap__block">
         <div class="form-wrap__title">Поиск гостиницы в Седоне</div>
         <button type="button" class="form-wrap__close">
@@ -232,7 +232,7 @@
           class="form-wrap__form form"
         >
           <div class="form__item">
-            <label for="date-start" class="form__name">Дата заезда:</label>
+            <label for="date-start" class="form__name">Дата Заезда:</label>
             <div class="form__input">
               <input
                 type="text"
@@ -249,7 +249,7 @@
             </div>
           </div>
           <div class="form__item">
-            <label for="date-start" class="form__name">Дата выезда:</label>
+            <label for="date-start" class="form__name">Дата Выезда:</label>
             <div class="form__input">
               <input
                 type="text"
@@ -277,7 +277,7 @@
                     >Убавить количество взрослых</span
                   >
                 </button>
-                <input type="number" id="adult" placeholder="1" name="adult" />
+                <input type="number" id="adult" placeholder="2" name="adult" />
                 <button
                   type="button"
                   class="input-number__item input-number__item--plus"
@@ -309,7 +309,7 @@
                 <input
                   type="number"
                   id="children"
-                  placeholder="1"
+                  placeholder="2"
                   name="children"
                 />
                 <button
