--- a/index.html
+++ b/index.html
@@ -54,21 +54,23 @@
           <img
             src="img/welcome.svg"
             alt="Седона — небольшой городок в Аризоне, заслуживающий большего!"
+            width="458"
+            height="352"
           />
         </div>
         <section class="main-advantages">
           <h1 class="main-advantages__title main-title">
             Седона — небольшой городок в Аризоне, заслуживающий большего!
           </h1>
-          <p class="main-advantages__desc main-subtitle">
+          <h2 class="main-advantages__desc main-subtitle">
             Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
-          </p>
+          </h2>
           <ul class="main-advantages__list list-reset">
             <li
               class="main-advantages__item advantages-card advantages-card--blue"
             >
               <div class="main-advantages__wrap">
-                <h2 class="advantages-card__title">Настоящий городок</h2>
+                <h3 class="advantages-card__title">Настоящий городок</h3>
                 <p class="advantages-card__text">
                   Седона - не аттракцион для туристов, там течёт своя жизнь
                 </p>
@@ -82,19 +84,19 @@
               />
             </li>
             <li class="main-advantages__item advantages-card">
-              <h2 class="advantages-card__title">Небольшая площадь</h2>
+              <h3 class="advantages-card__title">Небольшая площадь</h3>
               <p class="advantages-card__text">
                 Все достопримечательности находятся очень близко
               </p>
             </li>
             <li class="main-advantages__item advantages-card">
-              <h2 class="advantages-card__title">Красивая дорога</h2>
+              <h3 class="advantages-card__title">Красивая дорога</h3>
               <p class="advantages-card__text">
-                Ехать в седону из лас-вегаса совсем не скучно!
+                Ехать в Седону из Лас-Вегаса совсем не скучно!
               </p>
             </li>
             <li class="main-advantages__item advantages-card">
-              <h2 class="advantages-card__title">Мало туристов</h2>
+              <h3 class="advantages-card__title">Мало туристов</h3>
               <p class="advantages-card__text">
                 Большинство едет в гранд каньон и толпится там
               </p>
